[package]
name = "keystone"
version = "0.10.0"
authors = ["Remco Verhoef <remco.verhoef@dutchcoders.io>",
           "Tasuku SUENAGA a.k.a. gunyarakun <tasuku-s-github@titech.ac>"]
description = "Rust bindings for the keystone-engine"
license = "GPL-2.0"
readme = "README.md"
include = ["src/*", "tests/*", "Cargo.toml", "COPYING", "README.md"]

[dependencies]
bitflags = "0.8"
libc = "0.2"
libkeystone-sys = { path = "libkeystone-sys", version = "0.10.0" }
