[package]
name = "keystone"
version = "0.9.0"
authors = [
  "Remco Verhoef <remco.verhoef@dutchcoders.io>",
  "Tasuku SUENAGA a.k.a. gunyarakun <tasuku-s-github@titech.ac>"
]
description = "Rust bindings for the keystone-engine"
license = "GPL-2.0"
readme = "README.md"
include = [
  "src/*", "tests/*", "Cargo.toml", "COPYING", "README.md",
  "keystone-sys/*"
]

[dependencies]
bitflags = "0.8"
libc = "0.2"
keystone-sys = { path = "keystone-sys", version = "0.9.0" }

[features]
default = []

use_system_keystone = ["keystone-sys/use_system_keystone"]
build_keystone_cmake = ["keystone-sys/build_keystone_cmake"]
